fix: updated dark mode colors

--- a/src/tokens/evo-dark.css
+++ b/src/tokens/evo-dark.css
@@ -90,6 +90,10 @@
             var(--color-neutral-0-rgb),
             var(--opacity-150)
         );
+        --color-ai-solid-green-subtle: #112611;
+        --color-ai-solid-blue-subtle: #112c31;
+        --color-ai-solid-purple-subtle: #20172f;
+        --color-ai-solid-red-subtle: #321919;
         --color-ai-gradient-full-spectrum: linear-gradient(
             223deg,
             var(--color-ai-solid-yellow-strong) 9.79%,
@@ -116,21 +120,21 @@
             var(--color-ai-solid-purple-strong) 0%,
             var(--color-ai-solid-red-strong) 100%
         );
-        --color-ai-gradient-purple-subtle-light: linear-gradient(
+        --color-ai-gradient-purple-subtle: linear-gradient(
             270deg,
-            var(--color-ai-solid-purple-subtle-dark) 0%,
-            var(--color-ai-solid-red-subtle-dark) 100%
+            var(--color-ai-solid-purple-subtle) 0%,
+            var(--color-ai-solid-red-subtle) 100%
         );
-        --color-ai-gradient-blue-subtle-light: linear-gradient(
+        --color-ai-gradient-blue-subtle: linear-gradient(
             270deg,
-            var(--color-ai-solid-green-subtle-dark) -36%,
-            #ebf3fe 46.87%,
-            var(--color-ai-solid-purple-subtle-dark) 113%
+            var(--color-ai-solid-green-subtle) -36%,
+            var(--color-ai-solid-blue-subtle) -46.87%,
+            var(--color-ai-solid-purple-subtle) 113%
         );
-        --color-ai-gradient-green-subtle-light: linear-gradient(
+        --color-ai-gradient-green-subtle: linear-gradient(
             270deg,
-            var(--color-ai-solid-green-subtle-dark) 0%,
-            var(--color-ai-solid-blue-subtle-dark) 154.5%
+            var(--color-ai-solid-green-subtle) 0%,
+            var(--color-ai-solid-blue-subtle) 154.5%
         );
     }
 }
