--- a/src/tokens/evo-light.css
+++ b/src/tokens/evo-light.css
@@ -126,7 +126,7 @@
     --color-ai-gradient-blue-subtle: linear-gradient(
         270deg,
         var(--color-ai-solid-green-subtle) -36%,
-        #ebf3fe 46.87%,
+        var(--color-ai-solid-blue-subtle) -46.87%,
         var(--color-ai-solid-purple-subtle) 113%
     );
     --color-ai-gradient-green-subtle: linear-gradient(
